[metadata]
name = PCMS_txbdc
version = 0.0.1
license = 
description = TxBDC PCMS Application
long_description = file: README.md
author = David Pruitt
author_email = dtp110020@utdallas.edu
co-author = Yahriel Salinas-Reyes
co-author_email = dal866445@utdallas.edu
classifiers=Private :: Do Not Upload

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = 
    numpy>=1.24.4
    pandas>=2.0.3
    pyside6>=6.7.3
    pyqtgraph>=0.13.7

[options.packages.find]
where=src